@@ -903,7 +903,12 @@ class DirectionsQuestionnaireGeneratorTest {
                 dq.setResponseClaimCourtLocationRequired(null);
                 dq.setRespondToCourtLocation(null);
                 caseData.setRespondent1DQ(dq);
-                Assertions.assertDoesNotThrow(() -> generator.getTemplateData(caseData, BEARER_TOKEN));
+                DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
+
+                verify(representativeService).getRespondent1Representative(caseData);
+                assertThat(templateData).isNotNull();
+                assertThat(templateData.getRequestedCourt().getCaseLocation()).isNull();
+                assertThat(templateData.getRequestedCourt().getRequestHearingAtSpecificCourt()).isEqualTo(NO);
             }
 
             @Test
@@ -914,7 +919,11 @@ class DirectionsQuestionnaireGeneratorTest {
                 Respondent1DQ dq = caseData.getRespondent1DQ();
                 dq.setRespondent1DQExperts(null);
                 caseData.setRespondent1DQ(dq);
-                Assertions.assertDoesNotThrow(() -> generator.getTemplateData(caseData, BEARER_TOKEN));
+                DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
+
+                verify(representativeService).getRespondent1Representative(caseData);
+                assertThat(templateData).isNotNull();
+                assertThat(templateData.getExperts().getExpertRequired()).isEqualTo(NO);
             }
 
             @Test
@@ -938,7 +947,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 caseData.getRespondent1DQ().setRespondent1DQExperts(experts);
                 DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
 
-                Expert extracted = templateData.getExperts().getDetails().getFirst();
+                Expert extracted = templateData.getExperts().getDetails().get(0);
                 assertThat(extracted.getName()).isEqualTo(expert1.getName());
                 assertThat(extracted.getFieldOfExpertise()).isEqualTo(expert1.getFieldOfExpertise());
                 assertThat(extracted.getWhyRequired()).isEqualTo(expert1.getWhyRequired());
@@ -1256,7 +1265,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 caseData.setAllocatedTrack(AllocatedTrack.SMALL_CLAIM);
                 caseData.setResponseClaimTrack(SpecJourneyConstantLRSpec.SMALL_CLAIM);
                 caseData.setResponseClaimWitnesses(Integer.toString(2));
-                Assertions.assertDoesNotThrow(() -> generator.getTemplateData(caseData, BEARER_TOKEN));
+                DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
 
                 assertThat(!caseData.isRespondent1NotRepresented()).isFalse();
             }
@@ -1447,11 +1456,22 @@ class DirectionsQuestionnaireGeneratorTest {
 
             private String getHearingLength(DQ dq) {
                 var hearing = dq.getHearing();
-                return switch (hearing.getHearingLength()) {
-                    case LESS_THAN_DAY -> hearing.getHearingLengthHours() + " hours";
-                    case ONE_DAY -> "One day";
-                    default -> hearing.getHearingLengthDays() + " days";
-                };
+                switch (hearing.getHearingLength()) {
+                    case LESS_THAN_DAY:
+                        return hearing.getHearingLengthHours() + " hours";
+                    case ONE_DAY:
+                        return "One day";
+                    default:
+                        return hearing.getHearingLengthDays() + " days";
+                }
+            }
+
+            private HearingSupport getSupportRequirements() {
+                HearingSupport hearingSupport = new HearingSupport();
+                hearingSupport.setRequirements(List.of());
+                hearingSupport.setSupportRequirements(YES);
+                hearingSupport.setSupportRequirementsAdditional("Additional support needed");
+                return hearingSupport;
             }
 
             private String getHearingSupport(DQ dq) {
@@ -1798,7 +1818,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument).hasValue(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1842,7 +1862,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument).hasValue(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1886,7 +1906,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument).hasValue(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1936,7 +1956,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument).hasValue(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1980,7 +2000,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument).hasValue(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2035,7 +2055,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument).hasValue(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2075,18 +2095,6 @@ class DirectionsQuestionnaireGeneratorTest {
                 Assertions.assertThrows(
                     IllegalArgumentException.class,
                     () -> generator.generateDQFor1v2DiffSol(caseData, BEARER_TOKEN, null)
-                );
-            }
-
-            @Test
-            void when1v2SingleSolDiffResponseRespondentIsInvalid_shouldFail() {
-                CaseData caseData = CaseDataBuilder.builder()
-                    .atStateRespondentFullDefence_1v2_BothPartiesFullDefenceResponses()
-                    .build();
-
-                Assertions.assertThrows(
-                    IllegalArgumentException.class,
-                    () -> generator.generateDQFor1v2SingleSolDiffResponse(caseData, BEARER_TOKEN, "THREE")
                 );
             }
 
@@ -2412,11 +2420,14 @@ class DirectionsQuestionnaireGeneratorTest {
 
             private String getHearingLength(DQ dq) {
                 var hearing = dq.getHearing();
-                return switch (hearing.getHearingLength()) {
-                    case LESS_THAN_DAY -> hearing.getHearingLengthHours() + " hours";
-                    case ONE_DAY -> "One day";
-                    default -> hearing.getHearingLengthDays() + " days";
-                };
+                switch (hearing.getHearingLength()) {
+                    case LESS_THAN_DAY:
+                        return hearing.getHearingLengthHours() + " hours";
+                    case ONE_DAY:
+                        return "One day";
+                    default:
+                        return hearing.getHearingLengthDays() + " days";
+                }
             }
 
             private String getHearingSupport(DQ dq) {
@@ -2817,11 +2828,16 @@ class DirectionsQuestionnaireGeneratorTest {
                 .businessProcess(new BusinessProcess().setCamundaEvent("CLAIMANT_RESPONSE"))
                 .build();
 
-            String statementOfTruth = expectedStatementOfTruth("claimant", "in this claim");
+            String statementOfTruth = "The claimant believes that the facts in this claim are true."
+                + "\n\n\nI am duly authorised by the claimant to sign this statement.\n\n"
+                + "The claimant understands that the proceedings for contempt of court "
+                + "may be brought against anyone who makes, or causes to be made, "
+                + "a false statement in a document verified by a statement of truth "
+                + "without an honest belief in its truth.";
 
             DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
-            assertNotEquals(SPEC_CLAIM, caseData.getCaseAccessCategory());
-            assertEquals(statementOfTruth, templateData.getStatementOfTruthText());
+            assertNotEquals(caseData.getCaseAccessCategory(), SPEC_CLAIM);
+            assertEquals(templateData.getStatementOfTruthText(), statementOfTruth);
         }
 
         @Test
@@ -2839,22 +2855,16 @@ class DirectionsQuestionnaireGeneratorTest {
                 .businessProcess(new BusinessProcess().setCamundaEvent("DEFENDANT_RESPONSE"))
                 .build();
 
-            String statementOfTruth = expectedStatementOfTruth("defendant", "stated in the response");
+            String statementOfTruth = "The defendant believes that the facts stated in the response are true."
+                + "\n\n\nI am duly authorised by the defendant to sign this statement.\n\n"
+                + "The defendant understands that the proceedings for contempt of court "
+                + "may be brought against anyone who makes, or causes to be made, "
+                + "a false statement in a document verified by a statement of truth "
+                + "without an honest belief in its truth.";
 
             DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
-            assertNotEquals(SPEC_CLAIM, caseData.getCaseAccessCategory());
-            assertEquals(statementOfTruth, templateData.getStatementOfTruthText());
-        }
-
-        private String expectedStatementOfTruth(String party, String factsText) {
-            return """
-                The %s believes that the facts %s are true.%n%n%n\
-                I am duly authorised by the %s to sign this statement.%n%n\
-                The %s understands that the proceedings for contempt of court \
-                may be brought against anyone who makes, or causes to be made, \
-                a false statement in a document verified by a statement of truth \
-                without an honest belief in its truth."""
-                .formatted(party, factsText, party, party);
+            assertNotEquals(caseData.getCaseAccessCategory(), SPEC_CLAIM);
+            assertEquals(templateData.getStatementOfTruthText(), statementOfTruth);
         }
     }
 }
